--- a/movie-app/style.css
+++ b/movie-app/style.css
@@ -16,10 +16,9 @@ body {
 header {
   padding: 1rem;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   background-color: var(--secondary-color);
 }
-
 .search {
   background-color: transparent;
   border: 2px solid var(--primary-color);
@@ -27,6 +26,7 @@ header {
   font-family: inherit;
   font-size: 1rem;
   padding: 0.5rem 1rem;
+  width: 50vw;
   color: #fff;
 }
 
@@ -42,6 +42,7 @@ header {
 main {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .movie {
